[package]
name = "integrated-spreadsheet-environment"
version = "0.1.0"
authors = ["Korede Aderele <kaderele@gmail.com>"]
edition = "2018"

[dependencies]
yew = { git = "https://github.com/yewstack/yew", features = ["toml", "yaml", "msgpack", "cbor"] }
maplit = "1.0.2"
# cargo-web = "0.6.26"
stdweb = "0.4.20"
wasm-bindgen = "0.2.47"
serde = "1.0.102"

[dependencies.web-sys]
version = "0.3.24"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

