[package]
name = "integrated-spreadsheet-environment"
version = "0.1.0"
authors = ["Korede Aderele <kaderele@gmail.com>"]
edition = "2018"

[dependencies]
yew = { version = "0.12", features = ["toml", "yaml", "msgpack", "cbor"] }
maplit = "1.0.2"
# cargo-web = "0.6.26"
stdweb = "0.4.3"
wasm-bindgen = "0.2.47"
serde = "1.0.102"
serde_json = "1.0"
log = "0.4"
web_logger = "0.2"
itertools = "0.8.2"
pest = "2.1.2"
pest_derive = "2.1.0"
js-sys = "0.3.35"
node-sys = "0.3.0"
electron-sys = "0.4.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6" }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.4", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.web-sys]
version = "0.3.24"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]